# chat-sfdr

./: README.md  client.ipynb  pyproject.toml  upload.ipynb
app/: server.py
